--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,12 @@ uuid = "a58aefc9-eb2b-4c0e-adae-65fbfd9781c5"
 authors = ["Florian Zink <zink.florian@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+Cairo = "159f3aea-2a34-519c-b102-8c37f9878175"
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
+DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
+GZip = "92fee26a-97fe-5a0c-ad85-20a5f3185b63"
+
 [compat]
 julia = "1.3"
 
