--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,10 @@ DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 GZip = "92fee26a-97fe-5a0c-ad85-20a5f3185b63"
 
 [compat]
+Cairo = "1.0"
+Colors = "0.12"
+DataStructures = "0.18"
+GZip = "0.5"
 julia = "1.3"
 
 [extras]
